# backend/src/app.js
@@ -5,9 +5,11 @@ import helmet from 'helmet';
 import swaggerUi from 'swagger-ui-express';
 import { connectDB } from './config/database.js';
 import swaggerSpec from './config/swagger.js';
+import './models/user.model.js';
 import authRoutes from './routes/auth.routes.js';
 import userRoutes from './routes/user.routes.js';
 import errorHandler from './middlewares/error.middleware.js';
+import { apiLimiter, authLimiter } from './middlewares/rateLimiter.middleware.js';
 import response from './utils/response.js';
 
 const app = express();
@@ -19,8 +21,8 @@ app.use(express.urlencoded({ extended: true }));
 
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerSpec, { explorer: true }));
 
-app.use('/api/v1/auth', authRoutes);
-app.use('/api/v1/users', userRoutes);
+app.use('/api/v1/auth', authLimiter, authRoutes);
+app.use('/api/v1/users', apiLimiter, userRoutes);
 
 app.get('/health', (req, res) => {
   response.message(res, 'Server is running');
